; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_models/server/extr_state_binding.c_bt_mesh_convert_lightness_actual_to_linear.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_models/server/extr_state_binding.c_bt_mesh_convert_lightness_actual_to_linear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UINT16_MAX = common dso_local global float 0.000000e+00, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @bt_mesh_convert_lightness_actual_to_linear(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca float, align 4
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = sitofp i64 %4 to float
  %6 = load float, float* @UINT16_MAX, align 4
  %7 = fdiv float %5, %6
  store float %7, float* %3, align 4
  %8 = load float, float* @UINT16_MAX, align 4
  %9 = load float, float* %3, align 4
  %10 = fmul float %8, %9
  %11 = load float, float* %3, align 4
  %12 = fmul float %10, %11
  %13 = call i64 @bt_mesh_ceiling(float %12)
  ret i64 %13
}

declare dso_local i64 @bt_mesh_ceiling(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
